# ml-projects

./: README.md
linear-regressor-public-bonds-investment/: pyproject.toml
linear-regressor-public-bonds-investment/src/: regressor_on_framework.py
text-classifier-with-web-scraping/: README.md  pyproject.toml
text-classifier-with-web-scraping/src/: main.py
