[tool.poetry]
name = "text-classifier-with-web-scraping"
version = "0.1.0"
description = ""
authors = ["felipesilvaibi <felipe_ibirama@hotmail.com>"]
readme = "README.md"
packages = [{include = "text_classifier_with_web_scraping"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
