[tool.poetry]
name = "text-classifier-with-web-scraping"
version = "0.1.0"
description = ""
authors = ["felipesilvaibi <felipe_ibirama@hotmail.com>"]
readme = "README.md"
packages = [{include = "text_classifier_with_web_scraping"}]

[tool.poetry.dependencies]
python = "^3.8"
config = "^0.5.1"
praw = "^7.6.0"
numpy = "^1.23.3"
sklearn = "^0.0"
seaborn = "^0.12.0"
poetry-dotenv-plugin = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
